# bayesian-iroha

./: .ai-instructions  .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
notebooks/01_web_performance/: README.md  roi_decision.html  roi_decision.ipynb
notebooks/02_hockey_gotender/: README.md  hockey_spatial_analysis.html  hockey_spatial_analysis.ipynb  privacy_utils.py
notebooks/03_Sales_forecast_by_market_location/: README.md  hierarchical_baysian_linear_regression.html  hierarchical_baysian_linear_regression.ipynb  sales_performance.csv  weakly_information_prior.html  weakly_information_prior.ipynb
notebooks/04_survey_latent_segmentasion/: mixture_model_inference.ipynb
site_libs/bootstrap/: bootstrap-2df5bd0b2bf7f82aff587e37ec50217e.min.css  bootstrap-31f351203d89b12ac38b5b965e050436.min.css
src/bayesian_iroha/: __init__.py  style.py
