[project]
name = "bayesian-iroha"
version = "0.1.0"
description = "Decision-Making with Hierarchical Bayes: Beyond Significance Testing. Implementing ROPE/ROI-based risk visualization frameworks using PyMC v5 to navigate small data and optimize business outcomes."
authors = [
    {name = "petaLab",email = "analytics@petalab.pro"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pymc (>=5.26.1,<6.0.0)",
    "arviz (>=0.23.0,<0.24.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "graphviz (>=0.21,<0.22)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
